# libconv

./: .gitignore  README.md  configure.ac  src_noopt_c.tar.xz  src_noopt_f90.tar.xz  src_optim_avx.tar.xz
DSL/: BigDFT.rb  TestOperations.ipynb
DSL/lib/: bigdft.rb  config.yml  libconv.rb
DSL/lib/bigdft/: boundary_condition.rb  brokers.rb  data_space.rb  dimension.rb  lib_conv_kernel.rb  operators.rb  space.rb  system.rb  wave_function.rb
DSL/lib/libconv/: boundary_condition.rb  brokers.rb  data_space.rb  dimension.rb  lib_conv_kernel.rb  operators.rb  space.rb  system.rb  wave_function.rb
DSL/old/: test_dsl.rb
DSL/test/: .gitignore  bigdft_arithmetic_test.rb  bigdft_test.rb  libconv_arithmetic_test.rb  libconv_test.rb
DSL/test/bigdft/: system.rb  wave_function.rb
DSL/test/libconv/: refs.rb  system.rb  wave_function.rb
boast/: AnaRotPer-2.rb  GenericConvolution2.rb  GenericConvolution3.rb  LibconvBase.rb  MagicFilter2.rb  PoissonFilters.rb  Synthesis.rb  TestBuild.rb  WaveletFilters.rb
src/: Makefile.am
tests/: Makefile.am  generic.f90  libconv.f90
